trunk/Archive2/88/b8aaebcdc1aba4/output
main.cpp: In function 'int main()':
main.cpp:41:36: error: invalid initialization of non-const reference of type 'long long unsigned int&' from an rvalue of type 'long long unsigned int'
     auto truc = ToDouble( ToInt(a) | ToInt(b) );
                                    ^
main.cpp:23:16: note: in passing argument 1 of 'double& ToDouble(long long unsigned int&)'
 inline double& ToDouble(unsigned long long& value)
                ^
